--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.1",
-    "@veltdev/codemirror-crdt": "^1.0.1",
-    "@veltdev/react": "^4.5.0-beta.59",
+    "@veltdev/codemirror-crdt": "^4.5.0-beta.1",
+    "@veltdev/react": "^4.5.0-beta.61",
     "codemirror": "^6.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
