--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.1",
-    "@veltdev/codemirror-crdt": "^4.5.0-beta.4",
+    "@veltdev/codemirror-crdt-react": "^4.5.0-beta.2",
     "@veltdev/react": "^4.5.2-beta.2",
     "codemirror": "^6.0.2",
     "react": "^19.1.0",
